--- a/index/index.css
+++ b/index/index.css
@@ -8,7 +8,7 @@
 /* Header e Navegação */
 header {
     background-color: #1a1a1a;
-    padding: 1rem 2rem;
+    padding: 40px;
     position: fixed;
     width: 100%;
     top: 0;
@@ -25,19 +25,20 @@ nav {
 
 .logo h1 {
     color: #ffffff;
-    font-size: 2rem;
+    font-size: 3rem;
+    text-align: center;
 }
 
 .nav-links {
     display: flex;
     list-style: none;
-    gap: 2rem;
+    gap: 2.5rem;
 }
 
 .nav-links a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 2.5rem;
     transition: color 0.3s;
 }
 
