--- a/index/index.css
+++ b/index/index.css
@@ -1,4 +1,5 @@
-* {
+* {padding: 768px;
+    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -21,6 +22,7 @@ nav {
     align-items: center;
     max-width: 768px;
     margin: 20 auto;
+    gap: 4rem;
 }
 
 .logo h1 {
